# splunk-opentelemetry-examples

./: README.md
.github/workflows/: gen-ai-autogen.yml  gen-ai-aws-agentcore.yml  gen-ai-aws-bedrock.yml  gen-ai-azure-open-ai.yml  gen-ai-crewai-framework.yml  gen-ai-langgraph.yml  gen-ai-openai-agents.yml  graphql-apollo-client.yml
gen-ai/autogen/: README.md
gen-ai/autogen/src/: market_research_agent.py  pyproject.toml
gen-ai/autogen/src/tests/: test_dependencies.py  test_evaluator_agent.py  test_idea_generator_agent.py  test_market_research_agent.py  test_message.py
gen-ai/aws-agentcore/agentcoreExample/: pyproject.toml
gen-ai/aws-bedrock/: app.py
gen-ai/aws-bedrock/tests/: test_app.py
gen-ai/azure-open-ai/: app.py
gen-ai/azure-open-ai/tests/: test_app.py
gen-ai/crewai-framework/math_problems/: pyproject.toml
gen-ai/langgraph/: README.md
gen-ai/langgraph/math_problems/: pyproject.toml
gen-ai/openai-agents/math_problems/: pyproject.toml
instrumentation/go/azure-functions/: go.mod  go.sum
instrumentation/go/linux/: go.mod  go.sum
instrumentation/java/aws-ecs-appd-dual-ingest-daemon-collector/: README.md  app-task-definition.json  collector-task-definition.json
instrumentation/nodejs/azure-functions/: package-lock.json  package.json
instrumentation/nodejs/linux/: package.json  (+1 more)
instrumentation/react-native-sample/: App.tsx  MRUM-Splunk-Instrumentation-Guide.md  README.md  SETUP-GUIDE.md  app.json  package-lock.json  package.json
ios-astronomy-mobile/: README.md  SETUP-GUIDE.md  SPLUNK-SDK-SETUP.md  iOS-Splunk-Instrumentation-Guide.md
(+79 files in other folders)
